# subjective-scoring

./: .gitignore  LICENSE  README.md  fix-plan.md  pyproject.toml
docs/superpowers/plans/: 2026-07-12-cohere-compatible-reranker.md
docs/superpowers/specs/: 2026-07-12-cohere-compatible-reranker-design.md
examples/: change_model.py  score_sql.py  score_text.py
src/subjective_scoring/: __init__.py  service.py
src/subjective_scoring/components/: __init__.py  aggregator.py  normalizer.py  router.py
src/subjective_scoring/engines/: __init__.py  _similarity.py  calculation.py  calibration.py  code_hybrid.py  code_static.py  sql_structure.py  text_reranker.py
src/subjective_scoring/models/: __init__.py  schemas.py
src/subjective_scoring/rerankers/: __init__.py  cohere.py
tests/: test_benchmark_runner.py  test_exam_system_benchmark.py  test_optional_remote_dependency.py  test_remote_reranker.py  test_score_calibration.py  test_scoring_aggregator.py  test_scoring_engines_calculation.py  test_scoring_engines_code.py  test_scoring_engines_code_static.py  test_scoring_engines_sql.py  test_scoring_engines_text.py  test_scoring_models.py  test_scoring_normalizer.py  test_scoring_router.py  test_scoring_service.py
tests/benchmarks/: __init__.py  code_cases.json  exam_system_runner.py  runner.py  sql_cases.json  text_cases.json
tests/fixtures/: exam_system_subjective_cases.json
